# DesktopTab

./: .gitignore  CMakeLists.txt  calloutpanel.cpp  calloutpanel.h  main.cpp  mainpanel.cpp  mainpanel.h  tabpanel.cpp  tabpanel.h  utils.h
assets/: app.rc  main.qrc
